@@ -219,6 +219,14 @@
                         </goals>
                     </execution>
                     <execution>
+                        <id>jacoco-site</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+
+                    <execution>
                         <id>report</id>
                         <phase>test</phase>
                         <goals>
@@ -239,11 +247,21 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version>
+
                 <configuration>
+
+                    <forkCount>5</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Dnet.sf.ehcache.disabled=true</argLine>
                     <argLine>
-                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED -Xmx1536m
+                        @{argLine}
+                        --add-opens module_name/com.myco.project=ALL-UNNAMED
+                        --add-opens module_name/com.myco.project.more=ALL-UNNAMED
+                        --add-opens module_name/com.myco.project.others=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                     </argLine>
                 </configuration>
+
             </plugin>
         </plugins>
     </build>
